Preventing conternt shifts with error and success messages

--- a/src/Pages/AuthPage/AuthPage.css
+++ b/src/Pages/AuthPage/AuthPage.css
@@ -71,6 +71,7 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
+    position: relative;
 }
 .auth-form-toggle{
     text-align: center;
@@ -85,12 +86,17 @@
     }
 }
 
-.auth-error{
+.auth-error, .auth-success{
     text-align: center;
+    width: 100%;
+    position: absolute;
+    top: -4px;
+    transform: translateY(-100%);
+}
+.auth-error{
     color:var(--error-col);
 }
 .auth-success{
-    text-align: center;
     color: var(--success-col);
 }
 
